recursion.logo.square.FourSquare.scala.error
Erreur de compilation :
FourSquare:1: error: identifier expected but integer literal found.
override def run(100.) { avance(100.)
                 ^FourSquare:5: error: ':' expected but '}' found.
}
^