recursion.logo.square.FourSquare.scala.code
override def run(100.) { avance(100.)
}
